# druppie-fork

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.init  Dockerfile.reset  Druppie-92.md  FRONTEND.md  LANGUAGE_PERSISTENCE_TEST_REPORT.md  MCP-ARCHITECTURE.md  MCP.md  PLAN-continue-agent-run.md  README.md  analyze_storage.sh  automaker  claude.md  debug_login.js  deploy-finder-agent.py  docker-compose.robbe.yml  docker-compose.yml  evaluation_config.yaml  finder-agent.yaml  goal.md  goal2.md  implementatieplan_tester.md  implementatietesteragent.md  open-ports.sh  opencode.json  pbiBouwerTesterAgent.md  pr-141-improvements.md  setup-venv.sh  setup.sh  setup_dev.sh  smiley.md  test-gh-proxy.md  test.sh  (+1 more)
druppie/: Dockerfile  __init__.py  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup-full.sh  setup.sh
druppie/.claude/: ralph-loop.local.md
druppie/agents/: README.md  __init__.py  builtin_tools.py  definition_loader.py  deployer.yaml  execute_coding_task_pi.py  hitl.py  loop.py  message_history.py  models.py  pi_agent_runner.py  planner.yaml  prompt_builder.py  reviewer.yaml  router.yaml  runtime.py
druppie/api/: README.md  __init__.py  deps.py  errors.py  main.py  schemas.py  websocket.py
druppie/benchmarks/: __init__.py  assertions.py  runner.py  schema.py  user_simulator.py
druppie/config/: tdd_config.py
druppie/core/: README.md  __init__.py  auth.py  background_tasks.py  builder.py  config.py  execution_context.py  gitea.py  language_detection.py  loop.py  mcp_client.py  mcp_config.py  mcp_config.yaml  models.py  orchestrator.py  sandbox_auth.py  state.py  tool_registry.py  workspace.py
druppie/db/: README.md  __init__.py  crud.py  database.py  migrations.py  models.py  schema.sql  seed.py
druppie/docs/: e2e-test-results.md  mcp-injection.md
druppie/domain/: README.md  __init__.py  agent_definition.py  agent_run.py  approval.py  atk_agent.py  common.py  custom_agent.py  evaluation.py  project.py  question.py  session.py  skill.py  tool.py  user.py
druppie/evaluation/: __init__.py  config.py  context.py  judge.py  live_evaluator.py
druppie/execution/: README.md  __init__.py  human_input.py  mcp_http.py  orchestrator.py  tool_context.py  tool_executor.py
druppie/fixtures/: __init__.py  loader.py  schema.py
druppie/flows/: base.py  explore.py
druppie/llm/: __init__.py  base.py  deepinfra.py  deepseek.py  fallback.py  language_detection.py  litellm_provider.py  zai.py  (+3 more)
python-codebase/: .gitignore  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml
(+1258 files in other folders)
