[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "druppie-sdk"
version = "0.1.0"
description = "Druppie platform SDK — call modules from built apps"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
